Making project configuration to use JWT tokens